pov-check-health (0.4) UNRELEASED; urgency=low

  * check-health -g to generate a config file.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 22 Aug 2013 12:04:16 +0300

pov-check-health (0.3) precise; urgency=low

  * checkuptime accepts "min", "hour" and "sec" suffixes in addition to "m",
    "h", "s".
  * Fixed bug in extract-documentation.py where it would drop the first
    documented check (checkuptime).
  * Bugfix for checkinodes on /very/long/device/names.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 23 Jul 2013 15:12:28 +0300

pov-check-health (0.2) precise; urgency=low

  * check-health -v for verbose operation.
  * check-health -h for help operation.
  * check-health -f filename for different config file.
  * All checks in functions.sh were documented.
  * Added manual page for check-health(8).

 -- Marius Gedminas <marius@gedmin.as>  Tue, 23 Jul 2013 11:54:11 +0300

pov-check-health (0.1) precise; urgency=low

  * Initial release.

 -- Marius Gedminas <marius@pov.lt>  Mon, 22 Jul 2013 15:38:14 +0300