@@ -1,6 +1,7 @@
 pov-check-health (0.4) UNRELEASED; urgency=low
 
   * check-health -g to generate a config file.
+  * checkproc now supports scripts by using pidof -x.
 
  -- Marius Gedminas <marius@gedmin.as>  Thu, 22 Aug 2013 12:04:16 +0300
 
